# autoresearch2

./: .gitignore  README.md  download_stock.py  package-lock.json  package.json  pyproject.toml
configs/: default.yaml
docs/: 20260329_blockpair_baseline_handoff.md  champion_reproducibility_appendix.md  eastmoney-cookie-session-analysis.md  execution_aware_control_handoff_2026-03-26.md
docs/plans/: 2026-03-22-eastmoney-cookie-warmer-implementation.md  2026-03-22-env-proxy-toggle.md  2026-03-24-deployment-latest-5y-training.md  2026-03-24-juliang-proxy-design.md  2026-03-24-juliang-proxy-implementation.md  2026-03-25-download-incremental-progress.md  2026-03-25-prediction-website-archive-design.md  2026-03-25-prediction-website-archive.md  2026-03-25-prediction-website-design.md  2026-03-25-prediction-website-implementation.md  2026-03-25-train-deploy-only-design.md  2026-03-25-train-deploy-only.md  2026-03-26-top10-validation-fallback-and-history-charts-design.md  2026-03-26-top10-validation-fallback-and-history-charts.md  2026-03-26-windowed-training-and-history-prediction-design.md  2026-03-26-windowed-training-and-history-prediction.md
src/quant_impl/: __init__.py  cli.py  settings.py
src/quant_impl/data/: __init__.py  market.py
src/quant_impl/modeling/: __init__.py  (+1 more)
tests/: helpers.py  test_champion_spec.py  test_download_stock.py  test_logging.py  test_market_bundle.py  test_prediction_validation.py  test_settings.py  test_train_pipeline.py
tools/: eastmoney_cookie_warmer.mjs
web/: package-lock.json  package.json
web/tests/: predictions.test.mjs
(+20 files in other folders)
